--- a/files/nginx.conf
+++ b/files/nginx.conf
@@ -40,6 +40,7 @@ http {
     server {
         listen 80;
         listen 8080;
+        listen 8000;
         listen 443;
 
         location ~* ^/(.*) {
